# MePO

./: .codex-design-base-headers.txt  .codex-design-browser-headers.txt  .codex-design-headers.txt  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py  routes_ai.py  routes_ai_actions.py  routes_ai_conversations.py  routes_audit.py  routes_auth.py  routes_chat.py  routes_comments.py  routes_documents.py  routes_imports.py  routes_knowledge.py  routes_memberships.py  routes_projects.py  routes_skills.py  routes_spaces.py  routes_tickets.py  routes_topics.py  routes_users.py
backend/app/contracts/: __init__.py  runtime.py  skill.py
backend/app/core/: config.py  database.py  feature_flags.py
backend/app/models/: __init__.py  ai_action_proposal.py  ai_conversation.py  ai_conversation_summary.py  ai_message.py  ai_use_case_snapshot.py  artifact.py  audit_log.py  comment.py  document.py  import_job.py  (+15 more)
backend/tests/: test_ai_action_confirmation.py  test_ai_conversations.py  test_ai_pipeline_integration.py  test_ai_response_parser.py  test_ai_runtime_calibration.py  test_ai_runtime_contracts.py  test_ai_runtime_foundation.py  test_ai_runtime_modes.py  test_ai_stabilization.py  test_content_extractor.py  test_context_assembly_v2.py  test_google_first_standard_path.py  test_knowledge_selector.py  test_knowledge_sync.py  test_llm_gateway_chat_completions.py  test_llm_gateway_file_search.py  test_project_skill_settings.py  test_use_case_validation.py
(+202 files in other folders)
