[project]
name = "shadow-po-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Shadow PO AI"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.5",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "uvicorn[standard]>=0.32.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
